tests/pass/Kast.java
package pass;

public class Kast {

    public static void main(String[] args) {
        Object[] oa;
        oa = (Object[]) args;
        args = (String[]) oa;
    }

}
