tests/fail/LexicalErrors.java
package fail;

import java.lang.System;

public class LexicalErrors {

    # Illegal comment.
    public static void main(String[] args) {
        System.out.println("Hello, World!");
    }

}
